WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140029
[iOS] Fix memory leak in FeatureCounter
https://bugs.webkit.org/show_bug.cgi?id=140029
Summary
[iOS] Fix memory leak in FeatureCounter
Chris Dumez
Reported
2015-01-01 13:04:17 PST
Fix memory leak in FeatureCounter, the NSString for the counter key is never released. Radar: <
rdar://problem/19255690
>
Attachments
Patch
(2.77 KB, patch)
2015-01-01 13:06 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-01-01 13:06:46 PST
Created
attachment 243868
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-01 14:35:58 PST
Comment on
attachment 243868
[details]
Patch Clearing flags on attachment: 243868 Committed
r177850
: <
http://trac.webkit.org/changeset/177850
>
WebKit Commit Bot
Comment 3
2015-01-01 14:36:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug