[iOS] Fix memory leak in FeatureCounter https://bugs.webkit.org/show_bug.cgi?id=140029 <rdar://problem/19255690>

Reviewed by Darin Adler.

Fix memory leak in FeatureCounter. The NSString for the counter key
was allocated but never released. The patch switches to using a
RetainPtr instead of a raw pointer to avoid the issue.

* platform/ios/FeatureCounter.mm:
(WebCore::FeatureCounter::incrementKey):
(WebCore::FeatureCounter::setKey):


Canonical link: https://commits.webkit.org/158008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177850 268f45cc-cd09-0410-ab3c-d52691b4dbfc