Source/WebCore/platform/ios/FeatureCounter.mm
@@ -28,6 +28,7 @@
 
 #if PLATFORM(IOS) && USE(APPLE_INTERNAL_SDK)
 #import <AppSupport/CPAggregateDictionary.h>
+#include <wtf/RetainPtr.h>
 
 namespace WebCore {
 
@@ -36,8 +37,8 @@ void FeatureCounter::incrementKey(Page* page, const char* const key)
     if (!shouldUseForPage(page))
         return;
 
-    NSString *nsKey = [[NSString alloc] initWithCharactersNoCopy:reinterpret_cast<unichar*>(const_cast<char*>(key)) length:strlen(key) freeWhenDone:NO];
-    [[CPAggregateDictionary sharedAggregateDictionary] incrementKey:nsKey];
+    RetainPtr<NSString> nsKey = adoptNS([[NSString alloc] initWithCharactersNoCopy:reinterpret_cast<unichar*>(const_cast<char*>(key)) length:strlen(key) freeWhenDone:NO]);
+    [[CPAggregateDictionary sharedAggregateDictionary] incrementKey:nsKey.get()];
 }
 
 void FeatureCounter::setKey(Page* page, const char* const key, int64_t value)
@@ -45,8 +46,8 @@ void FeatureCounter::setKey(Page* page, const char* const key, int64_t value)
     if (!shouldUseForPage(page))
         return;
 
-    NSString *nsKey = [[NSString alloc] initWithCharactersNoCopy:reinterpret_cast<unichar*>(const_cast<char*>(key)) length:strlen(key) freeWhenDone:NO];
-    [[CPAggregateDictionary sharedAggregateDictionary] setValue:value forScalarKey:nsKey];
+    RetainPtr<NSString> nsKey = adoptNS([[NSString alloc] initWithCharactersNoCopy:reinterpret_cast<unichar*>(const_cast<char*>(key)) length:strlen(key) freeWhenDone:NO]);
+    [[CPAggregateDictionary sharedAggregateDictionary] setValue:value forScalarKey:nsKey.get()];
 }
 
 } // namespace WebCore
